--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
+    "eslint": "^3.16.1",
+    "eslint-plugin-react": "^6.10.0",
     "node-sass": "^4.5.0",
     "npm-run-all": "^4.0.2",
     "react-scripts": "0.9.3"
@@ -11,7 +13,10 @@
     "bootstrap": "^4.0.0-alpha.6",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "redux": "^3.6.0"
+    "react-redux": "^5.0.3",
+    "redux": "^3.6.0",
+    "uuid": "^3.0.1",
+    "vis": "^4.18.1"
   },
   "scripts": {
     "build-css": "node-sass src/ -o src/",
