--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.3",
     "redux": "^3.6.0",
-    "uuid": "^3.0.1",
+    "redux-logger": "^2.8.2",
     "vis": "^4.18.1"
   },
   "scripts": {
@@ -26,8 +26,5 @@
     "build": "npm-run-all build-css && react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  },
-  "esLintConfig": {
-    "extends": "react-app"
   }
 }
