--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
     "bootstrap": "^4.0.0-alpha.6",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-markdown": "^2.4.5",
     "react-redux": "^5.0.3",
     "redux": "^3.6.0",
     "redux-logger": "^2.8.2",
     "vis": "^4.18.1"
   },
   "scripts": {
-    "build-css": "node-sass src/ -o src/",
+    "build-css": "node-sass src/main/ -o src/main/",
     "watch-css": "npm run build-css && node-sass src/ -o src/ --watch --recursive",
     "start-js": "react-scripts start",
     "start": "npm-run-all -p watch-css start-js",
