--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "react-scripts": "0.9.3"
   },
   "dependencies": {
-    "bootstrap": "^4.0.0-alpha.6",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-markdown": "^2.4.5",
@@ -20,7 +19,7 @@
     "vis": "^4.18.1"
   },
   "scripts": {
-    "build-css": "node-sass src/main/ -o src/main/",
+    "build-css": "node-sass src/main/stylesheets/ -o src/main/stylesheets/",
     "watch-css": "npm run build-css && node-sass src/ -o src/ --watch --recursive",
     "start-js": "react-scripts start",
     "start": "npm-run-all -p watch-css start-js",
