--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-scripts": "0.9.3"
   },
   "dependencies": {
+    "font-awesome": "^4.7.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-markdown": "^2.4.5",
